# hitoku

./: Cargo.toml  README.md  action.yaml
.github/workflows/: ci.yaml  release.yaml  test-custom-action.yaml
src/: actions.rs  envvars.rs  io.rs  main.rs  template.rs
tests/: example.toml.tmpl
